<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jasmany.espressoandroid.Second">

    <TextView
        android:id="@+id/second_textView_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Sir Jasmany"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:textSize="50dp"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:shadowColor="@color/colorPrimaryDark"/>

</LinearLayout>
